--- a/rapport/rapport-groupe-L.tex
+++ b/rapport/rapport-groupe-L.tex
@@ -16,6 +16,8 @@
 
 \author{FONTAINE Romain, NYAKI Loïc, TIO NOGUERAS Gérard}
 
+
+
 \begin{document}
 \maketitle
 \newpage
@@ -80,6 +82,8 @@ We can send configuration requests through a MQTT publisher, that publishes on a
 
 
 \subsection{Summary of Message Types}
+The following section describes all the message types that are used by the IoT devices in order to organize themselves and communicate.
+
 \subsubsection{TAG-DISCOVERY: Discovery Message}
 When a node has doesn't belong to the network, it will try sending a broadcast request for potential parent nodes to manifest themselves. This is called a \textit{Discovery message}.
 
